--- a/src/main/resources/com/example/egyptian_league_management_system/insert.fxml
+++ b/src/main/resources/com/example/egyptian_league_management_system/insert.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="414.0" prefWidth="600.0" style="-fx-background-image: url('epl.jpg'); -fx-background-size: stretch; -fx-background-position: center center; -fx-background-repeat: no-repeat;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.egyptian_league_management_system.Controllers.InsertController">
+<AnchorPane prefHeight="414.0" prefWidth="600.0" style="-fx-background-image: url('epl.jpg'); -fx-background-size: stretch; -fx-background-position: center center; -fx-background-repeat: no-repeat;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="test.InsertController">
    <AnchorPane layoutX="297.0" layoutY="14.0" prefHeight="393.0" prefWidth="283.0">
       <children>
           <Label alignment="CENTER" layoutX="4.0" layoutY="8.0" prefHeight="39.0" prefWidth="291.0" text="Add New Team" wrapText="true">
