--- a/src/main/resources/com/example/egyptian_league_management_system/matchPane.fxml
+++ b/src/main/resources/com/example/egyptian_league_management_system/matchPane.fxml
@@ -4,33 +4,33 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="244.0" prefWidth="480.0" style="-fx-background-color: #303030;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.egyptian_league_management_system.Controllers.MatchPaneController">
-    <Label fx:id="labelTeam1" alignment="CENTER" layoutX="14.0" layoutY="37.0" prefHeight="70.0" prefWidth="153.0" style="-fx-text-fill: white;" text="Team1">
+<AnchorPane prefHeight="232.0" prefWidth="600.0" style="-fx-background-color: #303030;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.egyptian_league_management_system.Controllers.MatchPaneController">
+    <Label fx:id="labelTeam1" alignment="CENTER" layoutX="14.0" layoutY="37.0" prefWidth="153.0" style="-fx-text-fill: white;" text="Team1">
         <font>
             <Font size="27.0" />
         </font>
     </Label>
-    <Label fx:id="labelTeam2" alignment="CENTER" layoutX="312.0" layoutY="37.0" prefHeight="70.0" prefWidth="147.0" style="-fx-text-fill: white;" text="Team2">
+    <Label fx:id="labelTeam2" alignment="CENTER" layoutX="378.0" layoutY="37.0" prefWidth="147.0" style="-fx-text-fill: white;" text="Team2">
         <font>
             <Font size="27.0" />
         </font>
     </Label>
-    <Label fx:id="labelReferee" layoutX="56.0" layoutY="149.0" prefHeight="42.0" prefWidth="404.0" style="-fx-text-fill: white;" text="Referee">
+    <Label fx:id="labelReferee" layoutX="56.0" layoutY="149.0" prefWidth="404.0" style="-fx-text-fill: white;" text="Referee">
         <font>
             <Font size="20.0" />
         </font>
     </Label>
-    <Label fx:id="labelScore" layoutX="56.0" layoutY="107.0" prefHeight="42.0" prefWidth="404.0" style="-fx-text-fill: white;" text="Score" textOverrun="CLIP">
+    <Label fx:id="labelScore" layoutX="56.0" layoutY="107.0" prefWidth="404.0" style="-fx-text-fill: white;" text="Score" textOverrun="CLIP">
         <font>
             <Font size="20.0" />
         </font>
     </Label>
-    <Label fx:id="labelStadium" layoutX="56.0" layoutY="191.0" prefHeight="42.0" prefWidth="396.0" style="-fx-text-fill: white;" text="Stadium">
+    <Label fx:id="labelStadium" layoutX="56.0" layoutY="191.0" prefWidth="396.0" style="-fx-text-fill: white;" text="Stadium">
         <font>
             <Font size="20.0" />
         </font>
     </Label>
-    <Label fx:id="labelDate" layoutX="186.0" layoutY="51.0" prefHeight="42.0" prefWidth="107.0" style="-fx-text-fill: white;">
+    <Label fx:id="labelDate" layoutX="186.0" layoutY="51.0" prefWidth="107.0" style="-fx-text-fill: white;">
         <font>
             <Font name="System Bold" size="19.0" />
         </font>
