--- a/src/main/resources/com/example/egyptian_league_management_system/heldedMatch.fxml
+++ b/src/main/resources/com/example/egyptian_league_management_system/heldedMatch.fxml
@@ -1,17 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0"
-            style="-fx-background-image: url('epl.jpg'); -fx-background-size: cover; -fx-background-position: center;"
-            xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.example.egyptian_league_management_system.Controllers.HeldedMatchController">
-    <ScrollPane fx:id="scrollPane" prefHeight="400.0" prefWidth="600.0"
-                AnchorPane.topAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.bottomAnchor="30.0">
-        <VBox  style="-fx-background-image: url('epl.jpg'); -fx-background-size: cover; -fx-background-position: center;"
-               fx:id="vbox" alignment="CENTER" spacing="10" minHeight="0.0" minWidth="0.0">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url('epl.jpg'); -fx-background-size: cover; -fx-background-position: center;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.egyptian_league_management_system.Controllers.HeldedMatchController">
+    <ScrollPane fx:id="scrollPane" prefHeight="363.0" prefWidth="600.0" AnchorPane.bottomAnchor="37.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <VBox fx:id="vbox" alignment="CENTER" minHeight="0.0" minWidth="0.0" spacing="10" style="-fx-background-image: url('epl.jpg'); -fx-background-size: cover; -fx-background-position: center;">
         </VBox>
     </ScrollPane>
-    <Button layoutX="7.0" layoutY="364.0" mnemonicParsing="false" onAction="#onBackClick"
-            prefHeight="26.0" prefWidth="66.0" text="Back" />
+    <Button layoutX="7.0" layoutY="364.0" mnemonicParsing="false" onAction="#onBackClick" prefHeight="26.0" prefWidth="66.0" text="Back" />
 </AnchorPane>
