--- a/src/main/resources/com/example/egyptian_league_management_system/player.fxml
+++ b/src/main/resources/com/example/egyptian_league_management_system/player.fxml
@@ -4,8 +4,8 @@
 <?import javafx.scene.layout.*?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url('epl.jpg'); -fx-background-size: stretch; -fx-background-position: center center; -fx-background-repeat: no-repeat;" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.egyptian_league_management_system.Controllers.PlayerController">
-   <ScrollPane fx:id="scrollPane" prefHeight="400.0" prefWidth="600.0" fitToWidth="true" fitToHeight="true">
-      <VBox fx:id="vbox" style="-fx-background-image: url('epl.jpg'); -fx-background-size: stretch; -fx-background-position: center center; -fx-background-repeat: no-repeat;" alignment="TOP_CENTER" spacing="10">
+   <ScrollPane fx:id="scrollPane" fitToHeight="true" fitToWidth="true" prefHeight="363.0" prefWidth="600.0">
+      <VBox fx:id="vbox" alignment="TOP_CENTER" prefHeight="329.0" prefWidth="597.0" spacing="10" style="-fx-background-image: url('epl.jpg'); -fx-background-size: stretch; -fx-background-position: center center; -fx-background-repeat: no-repeat;">
 
       </VBox>
    </ScrollPane>
