--- a/src/main/resources/com/example/egyptian_league_management_system/teamsManagement.fxml
+++ b/src/main/resources/com/example/egyptian_league_management_system/teamsManagement.fxml
@@ -39,7 +39,10 @@
         </font>
     </Button>
 
-    <Label fx:id="infoLabel" layoutX="76.0" layoutY="294.0" prefHeight="106.0" prefWidth="474.0" text="" textAlignment="CENTER">
+    <Label fx:id="infoLabel" layoutX="50.0" layoutY="294.0" prefHeight="63.0" prefWidth="500.0" text="" textAlignment="CENTER">
+        <font>
+            <Font size="17.0" />
+        </font>
         <textFill>
             <LinearGradient cycleMethod="REPEAT" endX="1.0" endY="1.0">
                 <stops>
